# harmonicon

./: Cargo.toml  README.md  flake.nix  test.hc
examples/: mix.hc  stereo.hc  waves.hc
src/: driver.rs  error.rs  grammar.pest  main.rs  mixer.rs  note.rs  parse.rs  reload.rs
src/blocks/: amplifier.rs  constant.rs  mod.rs  oscillator.rs  sequencer.rs  stereo.rs
