[package]
name = "harmonicon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
notify = "8.2.0"
pest = "2.8.1"
pest_derive = "2.8.1"
rodio = { version = "0.21.1", default-features = false, features = ["playback"] }
thiserror = "2.0.14"

[profile.profiling]
inherits = "release"
debug = true
